--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@react-native-community/masked-view": "^0.1.6",
     "i": "^0.3.6",
     "moment": "^2.24.0",
+    "native-base": "^2.13.8",
     "npm": "^6.13.6",
     "react": "16.9.0",
     "react-native": "0.61.5",
     "react-native-awesome-alerts": "^1.3.0",
     "react-native-gesture-handler": "^1.5.2",
+    "react-native-normalize": "^1.0.1",
     "react-native-picker-select": "^6.3.3",
     "react-native-reanimated": "^1.4.0",
     "react-native-safe-area-context": "^0.6.2",
